# tearsheet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
evals/: README.md  corpus.json  run_eval.py
evals/baselines/: gh_raw_readme.json  gutenberg_alice.json  rfc2616_txt.json  rfc9110.json  w3c_css2.json
evals/reports/2026-07-16/: report.md
evals/reports/2026-07-16-run1/: report.md
src/tearsheet/: __init__.py  cache.py  cli.py  config.py  content.py  crawl.py  fetch.py  mapper.py  output.py  render.py  robots.py  scrape.py  search.py  server.py  structured.py  urls.py
tests/: conftest.py  test_adversarial.py  test_cache.py  test_cli.py  test_config.py  test_content.py  test_crawl.py  test_fetch.py  test_mapper.py  test_needs_render.py  test_output.py  test_parity.py  test_probation_pages.py  test_quality.py  test_render.py  test_render_and_scrape_modes.py  test_robots.py  test_scrape.py  test_search.py  test_server.py  test_structured.py  test_thin_coverage.py  test_urls.py
tests/fixtures/: article.html  botwall.html  emphasis_mangle.html  jsonld.html  noscript_shell.html  sitemap.xml  sitemap_index.xml  spa_shell.html  tables.html
